# ChunkSmith

./: .dockerignore  .gitignore  Readme.md  SETUP.md  a.py  a.txt  pyproject.toml  requirements.txt
Backend/: .dockerignore  DetailedInfo.ipynb  Dockerfile  Dockerfile.base  ImagetoAI.ipynb  ModalitySpecificChunking.ipynb  Pipeline.ipynb  SmartChunkClubing.ipynb  SmartPipelineClasses.ipynb  SmartPipelinedef.ipynb  apikeygoogle.py  apikeygroq.py  chunks_export.json  docker-compose.prod.yml  docker-compose.yml  imp.ipynb  langchain-groq-unstructured-rag.ipynb  main.py  multi_modal_rag.ipynb  output.txt  push-app-to-dockerhub.bat  push-base-to-dockerhub.bat  push-to-dockerhub.bat  push-to-dockerhub.sh  rag_results.json  requirements.txt  start.bat  start.sh
Backend/Database/JSON/: All_chunk.json  chunks_export.json  rag_results.json
Backend/Database/Pickel/: All.pkl  All_chunk.pkl
Backend/Pipeline_Database/JSON/: Checkpointer1.json  output.json
Backend/Pipeline_Database/Pickel/: Checkpointer1.pkl  output.pkl
Backend/SmartChunkClubing/JSON/: Checkpointer1.json  output_clean.json
Backend/SmartChunkClubing/Pickel/: Checkpointer1.pkl
Backend/api/: routes.py
Backend/config/: settings.py
Backend/core/: chat_agent.py  content_processor.py  document_parser.py  vector_store.py
Backend/output/: NIPS-2017-attention-is-all-you-need-Paper.pdf.json
Backend/utils/: c.py  file_helpers.py
Frontend/: index.html  pnpm-lock.yaml  tailwind.config.ts
Frontend/src/: App.tsx  index.css
docs/colab/: SmartPipelinedef.ipynb  api_key_manager.py  check.ipynb
(+95 files in other folders)
