[project]
name = "chunksmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.5",
    "fastapi>=0.123.10",
    "google>=3.0.0",
    "groq>=0.37.1",
    "langchain>=1.1.2",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.1.1",
    "langchain-google-genai>=4.0.0",
    "pdfminer-six>=20251107",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "unstructured-inference>=1.1.2",
    "unstructured[pdf]>=0.18.21",
    "uvicorn>=0.38.0",
]
